# voxel_cone_tracing

./: .gitignore  .gitmodules  .syntastic_c_config  .syntastic_cpp_config  :w  CMakeLists.txt  LICENSE  README.md  Session.vim  \  imgui.ini  setup.sh
assets/: cornell-box.mtl
lib/gl_utils/include/gl_utils/: gl_helpers.h
lib/gl_utils/src/: gl_helpers.c
lib/include/gl_utils/: gl_helpers.h
lib/src/gl_utils/: gl_helpers.c
paper/: elsarticle-template-1-num.aux  elsarticle-template-1-num.dvi  elsarticle-template-1-num.tex
shader/: mipmap.comp  passthrough.frag  passthrough.vert  testObj.mtl  voxel_cone_tracing.frag  voxel_cone_tracing.vert  voxelize.frag  voxelize.geom  voxelize.vert
src/: camera.h  command_bucket.cpp  command_bucket.h  device.h  main.c  main.cpp  pass.h  renderer.cpp  renderer.h  shared.h  texture_3d.cpp  texture_3d.h
